src/syntaxchecker/generated/AlphaCompilerParser.java
// Generated from /home/sharonblancopiedra/Documents/VII SEMESTRE/COMPILADORES/SEMANA 12/AlphaCompilerLLVM/AlphaCompiler.g4 by ANTLR 4.13.2
package syntaxchecker.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AlphaCompilerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, THEN=2, ELSE=3, WHILE=4, DO=5, LET=6, IN=7, BEGIN=8, END=9, CONST=10, 
		VAR=11, VOID=12, RETURN=13, TRUE=14, FALSE=15, SEMI=16, ASSIGN=17, LEFTP=18, 
		RIGHTP=19, VIR=20, COLON=21, ADD=22, SUB=23, MUL=24, DIV=25, MOD=26, EQEQ=27, 
		NOTEQ=28, LESS=29, MORET=30, LESSEQ=31, MOREEQ=32, ID=33, INTNUM=34, STRINGLIT=35, 
		CHARLIT=36, COMMENT=37, COMMENT_LINE=38, WS=39;
	public static final int
		RULE_program = 0, RULE_command = 1, RULE_singleCommand = 2, RULE_declaration = 3, 
		RULE_complexDeclaration = 4, RULE_singleDeclaration = 5, RULE_varSingleDeclaration = 6, 
		RULE_constSingleDeclaration = 7, RULE_paramList = 8, RULE_param = 9, RULE_argumentList = 10, 
		RULE_function = 11, RULE_typeDenoter = 12, RULE_expression = 13, RULE_primaryExpression = 14, 
		RULE_operator = 15, RULE_identifier = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "command", "singleCommand", "declaration", "complexDeclaration", 
			"singleDeclaration", "varSingleDeclaration", "constSingleDeclaration", 
			"paramList", "param", "argumentList", "function", "typeDenoter", "expression", 
			"primaryExpression", "operator", "identifier"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'then'", "'else'", "'while'", "'do'", "'let'", "'in'", 
			"'begin'", "'end'", "'const'", "'var'", "'void'", "'return'", "'true'", 
			"'false'", "';'", "':='", "'('", "')'", "'~'", "':'", "'+'", "'-'", "'*'", 
			"'/'", "'%'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "THEN", "ELSE", "WHILE", "DO", "LET", "IN", "BEGIN", "END", 
			"CONST", "VAR", "VOID", "RETURN", "TRUE", "FALSE", "SEMI", "ASSIGN", 
			"LEFTP", "RIGHTP", "VIR", "COLON", "ADD", "SUB", "MUL", "DIV", "MOD", 
			"EQEQ", "NOTEQ", "LESS", "MORET", "LESSEQ", "MOREEQ", "ID", "INTNUM", 
			"STRINGLIT", "CHARLIT", "COMMENT", "COMMENT_LINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AlphaCompiler.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AlphaCompilerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public SingleCommandContext singleCommand() {
			return getRuleContext(SingleCommandContext.class,0);
		}
		public TerminalNode EOF() { return getToken(AlphaCompilerParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34);
			singleCommand();
			setState(35);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CommandContext extends ParserRuleContext {
		public List<SingleCommandContext> singleCommand() {
			return getRuleContexts(SingleCommandContext.class);
		}
		public SingleCommandContext singleCommand(int i) {
			return getRuleContext(SingleCommandContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(AlphaCompilerParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(AlphaCompilerParser.SEMI, i);
		}
		public CommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_command; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CommandContext command() throws RecognitionException {
		CommandContext _localctx = new CommandContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_command);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			singleCommand();
			setState(42);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(38);
				match(SEMI);
				setState(39);
				singleCommand();
				}
				}
				setState(44);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleCommandContext extends ParserRuleContext {
		public SingleCommandContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleCommand; }
	 
		public SingleCommandContext() { }
		public void copyFrom(SingleCommandContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MethodCallSingleCommandContext extends SingleCommandContext {
		public TerminalNode ID() { return getToken(AlphaCompilerParser.ID, 0); }
		public TerminalNode LEFTP() { return getToken(AlphaCompilerParser.LEFTP, 0); }
		public TerminalNode RIGHTP() { return getToken(AlphaCompilerParser.RIGHTP, 0); }
		public ArgumentListContext argumentList() {
			return getRuleContext(ArgumentListContext.class,0);
		}
		public MethodCallSingleCommandContext(SingleCommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterMethodCallSingleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitMethodCallSingleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitMethodCallSingleCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class WhileSingleCommandContext extends SingleCommandContext {
		public TerminalNode WHILE() { return getToken(AlphaCompilerParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DO() { return getToken(AlphaCompilerParser.DO, 0); }
		public SingleCommandContext singleCommand() {
			return getRuleContext(SingleCommandContext.class,0);
		}
		public WhileSingleCommandContext(SingleCommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterWhileSingleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitWhileSingleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitWhileSingleCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class BlockSingleCommandContext extends SingleCommandContext {
		public TerminalNode BEGIN() { return getToken(AlphaCompilerParser.BEGIN, 0); }
		public CommandContext command() {
			return getRuleContext(CommandContext.class,0);
		}
		public TerminalNode END() { return getToken(AlphaCompilerParser.END, 0); }
		public BlockSingleCommandContext(SingleCommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterBlockSingleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitBlockSingleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitBlockSingleCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class IfSingleCommandContext extends SingleCommandContext {
		public TerminalNode IF() { return getToken(AlphaCompilerParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode THEN() { return getToken(AlphaCompilerParser.THEN, 0); }
		public List<SingleCommandContext> singleCommand() {
			return getRuleContexts(SingleCommandContext.class);
		}
		public SingleCommandContext singleCommand(int i) {
			return getRuleContext(SingleCommandContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(AlphaCompilerParser.ELSE, 0); }
		public IfSingleCommandContext(SingleCommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterIfSingleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitIfSingleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitIfSingleCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ReturnSingleCommandContext extends SingleCommandContext {
		public TerminalNode RETURN() { return getToken(AlphaCompilerParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ReturnSingleCommandContext(SingleCommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterReturnSingleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitReturnSingleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitReturnSingleCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class AssignSingleCommandContext extends SingleCommandContext {
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode ASSIGN() { return getToken(AlphaCompilerParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignSingleCommandContext(SingleCommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterAssignSingleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitAssignSingleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitAssignSingleCommand(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LetSingleCommandContext extends SingleCommandContext {
		public TerminalNode LET() { return getToken(AlphaCompilerParser.LET, 0); }
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode IN() { return getToken(AlphaCompilerParser.IN, 0); }
		public SingleCommandContext singleCommand() {
			return getRuleContext(SingleCommandContext.class,0);
		}
		public LetSingleCommandContext(SingleCommandContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterLetSingleCommand(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitLetSingleCommand(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitLetSingleCommand(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleCommandContext singleCommand() throws RecognitionException {
		SingleCommandContext _localctx = new SingleCommandContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_singleCommand);
		int _la;
		try {
			setState(81);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new AssignSingleCommandContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(45);
				identifier();
				setState(46);
				match(ASSIGN);
				setState(47);
				expression();
				}
				break;
			case 2:
				_localctx = new MethodCallSingleCommandContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(ID);
				setState(50);
				match(LEFTP);
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 128857718784L) != 0)) {
					{
					setState(51);
					argumentList();
					}
				}

				setState(54);
				match(RIGHTP);
				}
				break;
			case 3:
				_localctx = new IfSingleCommandContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(55);
				match(IF);
				setState(56);
				expression();
				setState(57);
				match(THEN);
				setState(58);
				singleCommand();
				setState(61);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(59);
					match(ELSE);
					setState(60);
					singleCommand();
					}
					break;
				}
				}
				break;
			case 4:
				_localctx = new WhileSingleCommandContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(63);
				match(WHILE);
				setState(64);
				expression();
				setState(65);
				match(DO);
				setState(66);
				singleCommand();
				}
				break;
			case 5:
				_localctx = new LetSingleCommandContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				match(LET);
				setState(69);
				declaration();
				setState(70);
				match(IN);
				setState(71);
				singleCommand();
				}
				break;
			case 6:
				_localctx = new BlockSingleCommandContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(73);
				match(BEGIN);
				setState(74);
				command();
				setState(75);
				match(END);
				}
				break;
			case 7:
				_localctx = new ReturnSingleCommandContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(77);
				match(RETURN);
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 128857718784L) != 0)) {
					{
					setState(78);
					expression();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclarationContext extends ParserRuleContext {
		public List<SingleDeclarationContext> singleDeclaration() {
			return getRuleContexts(SingleDeclarationContext.class);
		}
		public SingleDeclarationContext singleDeclaration(int i) {
			return getRuleContext(SingleDeclarationContext.class,i);
		}
		public List<ComplexDeclarationContext> complexDeclaration() {
			return getRuleContexts(ComplexDeclarationContext.class);
		}
		public ComplexDeclarationContext complexDeclaration(int i) {
			return getRuleContext(ComplexDeclarationContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(AlphaCompilerParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(AlphaCompilerParser.SEMI, i);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(85);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
			case VAR:
				{
				setState(83);
				singleDeclaration();
				}
				break;
			case VOID:
			case ID:
				{
				setState(84);
				complexDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMI) {
				{
				{
				setState(87);
				match(SEMI);
				setState(90);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONST:
				case VAR:
					{
					setState(88);
					singleDeclaration();
					}
					break;
				case VOID:
				case ID:
					{
					setState(89);
					complexDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComplexDeclarationContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ComplexDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_complexDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterComplexDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitComplexDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitComplexDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComplexDeclarationContext complexDeclaration() throws RecognitionException {
		ComplexDeclarationContext _localctx = new ComplexDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_complexDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			function();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SingleDeclarationContext extends ParserRuleContext {
		public SingleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_singleDeclaration; }
	 
		public SingleDeclarationContext() { }
		public void copyFrom(SingleDeclarationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class VarSingleDeclaration2Context extends SingleDeclarationContext {
		public VarSingleDeclarationContext varSingleDeclaration() {
			return getRuleContext(VarSingleDeclarationContext.class,0);
		}
		public VarSingleDeclaration2Context(SingleDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterVarSingleDeclaration2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitVarSingleDeclaration2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitVarSingleDeclaration2(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ConstSingleDeclaration2Context extends SingleDeclarationContext {
		public TerminalNode CONST() { return getToken(AlphaCompilerParser.CONST, 0); }
		public TerminalNode ID() { return getToken(AlphaCompilerParser.ID, 0); }
		public TerminalNode VIR() { return getToken(AlphaCompilerParser.VIR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConstSingleDeclaration2Context(SingleDeclarationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).enterConstSingleDeclaration2(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AlphaCompilerListener ) ((AlphaCompilerListener)listener).exitConstSingleDeclaration2(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AlphaCompilerVisitor ) return ((AlphaCompilerVisitor<? extends T>)visitor).visitConstSingleDeclaration2(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SingleDeclarationContext singleDeclaration() throws RecognitionException {
		SingleDeclarationContext _localctx = new SingleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_singleDeclaration);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONST:
				_localctx = new ConstSingleDeclaration2Context(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(99);
				match(CONST);
				setState(100);
				match(ID);
				setState(101);
				match(VIR);
				setState(102);
				expression();
				}
				break;
			case VAR:
				_localctx = new VarSingleDeclaration2Context(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(103);
				varSingleDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
